# PrimeSkill-Pro

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
apps/admin-web/: index.html  package.json
apps/admin-web/src/: api-client.ts  main.tsx  styles.css
apps/backend/: package.json  server.js  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/scripts/: seed-phase1-samples.ts
apps/backend/src/: README.md  app.module.ts  health.controller.ts  main.ts
apps/backend/test/: health.integration.test.ts  install-authorization.unit.test.ts  install.integration.test.ts  runtime.integration.test.ts  search-demo.integration.test.ts  search-llm.integration.test.ts  search.integration.test.ts  (+2 more)
apps/desktop-ui/: index.html  package.json  vite.config.ts
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/capabilities/: default.json
apps/desktop-ui/src-tauri/src/: main.rs
apps/native-core/: Cargo.toml  README.md
apps/native-core/src/: lib.rs
apps/search-worker/: package.json  tsconfig.json  worker.js
docs/: PLAN.md  agent-marketplace-handoff-2026-04-01.md  task.md  windows-verification-matrix.md
docs/adr/: 0001-api-boundary.md  0002-install-locking.md  0003-path-template-governance.md  0004-phase1-install-contract.md
infra/ci/: github-actions-ci.yml
infra/db/: README.md
infra/docker/: backend.Dockerfile  docker-compose.yml  nginx.Dockerfile  nginx.conf  worker.Dockerfile
scripts/: apply_migrations_order.sh  verify_foundation.sh
scripts/ci/: backend_integration_test.sh  docker_acceptance_test.sh  install_lifecycle_e2e_windows.ps1  search_permission_prefilter_test.sh  search_worker_queue_smoke_test.sh  startup_smoke_test.sh
scripts/dev/: down_local_stack.sh  up_local_stack.sh
tests/foundation/: p0_contracts_test.sh  p0_docker_init_test.sh  p0_migrations_test.sh  p0_startup_skeleton_test.sh  p0_tauri_host_test.sh
(+63 files in other folders)
