[package]
name = "prime_skill_native_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "prime_skill_native_core"
path = "src/lib.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
