[package]
name = "prime_skill_native_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "prime_skill_native_core"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
